universe-apps/environments/dev/universe-datascraper-api/patch-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: universe-datascraper-api
  annotations:
    acme.cert-manager.io/http01-ingress-class: nginx
    external-dns.alpha.kubernetes.io/hostname: dev.datascraper-api.universe.xyz
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-name: DEVXYZCOOKIE
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.org/client-max-body-size: "50m"
